# tezaurs-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  bun.lockb  docker-compose.yml  package-lock.json  package.json  tsconfig-node.json  tsconfig.json
src/: createTable.ts  index.ts  main.rs  registerCommandsGlobal.ts  registerCommandsGuild.ts
src/commands/: locijumi.ts  mod.rs  tezaurs.rs  tezaurs.ts
src/interfaces/: Command.ts
src/types/: Command.d.ts  Entry.d.ts  environment.d.ts
src/utils/: autocompleteHandler.ts  commandHandler.ts  commandList.ts  ephemeralError.ts  findWord.ts  intReply.ts  logCommand.ts  setBotPresence.ts  truncate.ts  validateEnv.ts
